--- a/docker/docker-compose.2004.57.yaml
+++ b/docker/docker-compose.2004.57.yaml
@@ -6,8 +6,7 @@ services:
     image: swift-distributed-tracing-baggage-core:20.04-5.7
     build:
       args:
-        ubuntu_version: "focal"
-        swift_version: "5.7"
+        base_image: "swiftlang/swift:nightly-5.7-focal"
 
   test:
     image: swift-distributed-tracing-baggage-core:20.04-5.7
